asteria/core/tests/errors/elaboration_errors/declared_term_name_not_in_scope_hint_closest_names.asteriacore
foo : forall {a : Type}. a -> a
    = \{a} -> \x -> x
    ;;

bar : forall {a : Type}. a -> a
    = \{a} -> \x -> x
    ;;

baz : forall {a : Type}. a -> a
    = \{a} -> \x -> x
    ;;

f : forall {a : Type}. a
  = Test$baar
  ;;
